alpm-repo-db/tests/parse_errors/files/wrong_header.files
%WRONG%
usr/
usr/bin/
usr/bin/foo
